<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/MapsFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/Coloque_chincheta"
        android:textColor="#1E1E1E"
        android:textSize="20sp"
        android:background="#BFF1EEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCoordenadas"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginBottom="27dp"
        android:background="#BFF1EEEE"
        android:paddingStart="22dp"
        android:paddingTop="10dp"
        android:paddingEnd="13dp"
        android:paddingBottom="10dp"
        android:text="@string/coordenadas_default"
        android:textColor="#1E1E1E"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </TextView>

    <Button
        android:id="@+id/botonAceptar"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="#E6BEBEBE"
        android:onClick="pasarCoordenadas"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:text="@string/botonAceptarCoordenadas"
        android:textColor="#101010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>