<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="213dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/botonSeleccionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonSeleccionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:onClick="selecionarCiudad"
        android:text="Selecionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="#66000000"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner">

        <TextView
            android:id="@+id/tvCiudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0D9C9C9C"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="#DDDDDD"
            android:textSize="25sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/tvTemperatua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0D9C9C9C"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text=""
            android:textColor="#DDDDDD"
            android:textAlignment="center"
            android:textSize="70sp">
        </TextView>

        <TextView
            android:id="@+id/tvTiempoAtmosferico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0D9C9C9C"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text=""
            android:textColor="#DDDDDD"
            android:textAlignment="center"
            android:textSize="25sp">
        </TextView>
    </LinearLayout>

    <TableLayout
        android:id="@+id/TL1"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:background="#66000000"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LL1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLetrasSensacionTermica"
                    android:text="@string/sensacion_termica"
                    style="@style/tvletras">
                </TextView>

                <TextView
                    android:id="@+id/tvSensacionTermica"
                    style="@style/tvinformacion">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLetrasHumedad"
                    android:text="@string/humedad"
                    style="@style/tvletras">
                </TextView>

                <TextView
                    android:id="@+id/tvHumedad"
                    style="@style/tvinformacion">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLetrasPresion"
                    android:text="@string/prersi_n_atmosf_rica"
                    style="@style/tvletras">
                </TextView>

                <TextView
                    android:id="@+id/tvPresion"
                    style="@style/tvinformacion">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLetrasVelocidadViento"
                    android:text="@string/velocidad_del_viento"
                    style="@style/tvletras">
                </TextView>

                <TextView
                    android:id="@+id/tvVelocidadViento"
                    style="@style/tvinformacion">
                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLetrasTemperaturaMin"
                    android:text="@string/temperatura_m_nima"
                    style="@style/tvletras">
                </TextView>

                <TextView
                    android:id="@+id/tvTemperaturaMin"
                    style="@style/tvinformacion">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLetrasTemperaturaMax"
                    android:text="@string/temperatura_m_xima"
                    style="@style/tvletras">
                </TextView>

                <TextView
                    android:id="@+id/tvTemperaturaMax"
                    style="@style/tvinformacion">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </TableLayout>

    <Button
        android:id="@+id/buscarCoordenadas"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:onClick="irMaps"
        android:text="Buscar ciudad en el mapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TL1" />

</androidx.constraintlayout.widget.ConstraintLayout>
